--- a/config.toml
+++ b/config.toml
@@ -6,59 +6,57 @@ enable-magisk-update = true   # set this to false if you do not want to receive 
 # you can use rvmm-config-gen to generate a config
 
 [YouTube]
-build-mode = "both"
-excluded-patches = ""
-included-patches = ""
-version = "auto"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
-
-[Music]
-build-mode = "both"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
-arch = "both"
-
-[Music-Extended]
-app-name = "Music"
-patches-source = "inotia00/revanced-patches"
-integrations-source = "inotia00/revanced-integrations"
-cli-source = "inotia00/revanced-cli"
-rv-brand = "ReVanced Extended"
-build-mode = "both"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
-arch = "both"
-
-[YouTube-Extended]
 app-name = "YouTube"
-patches-source = "inotia00/revanced-patches"
-integrations-source = "inotia00/revanced-integrations"
-cli-source = "inotia00/revanced-cli"
-rv-brand = "ReVanced Extended"
 build-mode = "both"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
+patches-source = "YT-Advanced/ReX-patches"
+integrations-source = "YT-Advanced/ReX-integrations"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
+included-patches = "'Add splash animation' 'Change player flyout panel toggles' 'Disable landscape mode' 'Enable debug logging' 'Hide animated button background' 'Hide double tap overlay filter' 'Hide double tap to like animations' 'Hide fullscreen button' 'Hide player button background' 'Hide player chapters' 'Hide voice search button' 'MaterialYou' 'Shorts outline button' 'Spoof player parameters'"
+excluded-patches = "'Custom branding icon YouTube' 'Custom branding name YouTube' 'Custom package name' 'Theme'"
 
-[Twitter]
-build-mode = "apk"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
+[YouTube Music]
+app-name = "YouTube Music"
+build-mode = "both"
+patches-source = "YT-Advanced/ReX-patches"
+integrations-source = "YT-Advanced/ReX-integrations"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
+arch = "both"
+included-patches = "'Disable overlay filter' 'Enable color match player' 'Enable debug logging' 'Enable old player background' 'Enable old player layout' 'Enable old style miniplayer' 'Enable zen mode' 'Hide double tap overlay filter' 'Hide player overlay filter' 'Hide voice search button' 'Replace cast button'"
+excluded-patches = "'Custom branding icon YouTube Music' 'Custom branding name YouTube Music' 'Custom package name'"
 
-[Twitch]
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
-
-[TikTok]
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
-included-patches = "'SIM spoof'"
+[Meme Generator]
+app-name = "Meme Generator"
+build-mode = "both"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/zombodroid/meme-generator-free"
 
 [Reddit]
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.reddit.frontpage"
+app-name = "Reddit"
+build-mode = "both"
+patches-source = "YT-Advanced/ReX-patches"
+integrations-source = "YT-Advanced/ReX-integrations"
+apkmirror-dlurl = "https://apkmirror.com/apk/redditinc/reddit"
 
-[Messenger]
-enabled = false
-apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
-arch = "arm64-v8a"
+[Tiktok]
+app-name = "TikTok"
+build-mode = "both"
+apkmirror-dlurl = "https://apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly"
+included-patches = "'SIM spoof'"
 
-[Spotify]
-enabled = false
-uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+[Twitch]
+app-name = "Twitch"
+build-mode = "both"
+apkmirror-dlurl = "https://apkmirror.com/apk/twitch-interactive-inc/twitch"
+included-patches = "'Debug mode'"
 
-[IconPackStudio]
-enabled = false
-apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
+[Twitter]
+app-name = "Twitter"
+build-mode = "both"
+patches-source = "crimera/piko"
+integrations-source = "crimera/revanced-integrations"
+apkmirror-dlurl = "https://apkmirror.com/apk/twitter-inc/twitter/"
+included-patches = "'Hide Banner' 'Hide Live Threads' 'Hide promote button' 'Force enable translate' 'Hide Community Notes' 'Hide FAB' 'Customize profile tabs' 'Bring back twitter' 'Disable chirp font' 'Add ability to copy media link'"
+
+[Yuka]
+app-name = "Yuka"
+build-mode = "both"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/yuka-apps/yuka-food-cosmetic-scan"
