--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ build-mode = "both"
 patches-source = "crimera/piko"
 integrations-source = "crimera/revanced-integrations"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
-included-patches = "'Hide Banner' 'Hide Live Threads' 'Hide promote button' 'Force enable translate' 'Hide Community Notes' 'Hide FAB' 'Customize profile tabs' 'Bring back twitter' 'Disable chirp font' 'Add ability to copy media link'"
+included-patches = "'Bring back twitter' 'Hide FAB' 'Customize profile tabs' 'Customize Navigation Bar items' 'Enable app icon settings' 'Force enable translate' 'Hide promote button' 'Hide Community Notes' 'Hide Banner' 'Hide Live Threads' 'Add ability to copy media link' 'Disable chirp font'"
 
 [Yuka]
 app-name = "Yuka"
